# ai-toolkit

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  entrypoint.sh  railway.json  test
config/: models.yaml  prompts.yaml
migrations/: 0001_init.sql  0002_glossary.sql  0003_summarizer.sql  0004_translatedocx.sql  0005_docx_direction.sql  0006_grader.sql  0007_module_configs.sql  0008_journal_seed.sql  0009_usage_limits.sql  0010_reviewer.sql  0011_global_token_limit.sql  0012_info_extract.sql  0013_history_and_retention.sql
notes/: next_shared_service.md  shared_status_plan.md  storage_download_plan.md  storage_download_survey.md
src/: config.rs  main.rs  usage.rs
src/history/: mod.rs
src/llm/: mod.rs
src/maintenance/: mod.rs
src/modules/: admin_shared.rs  mod.rs
src/modules/grader/: admin.rs  mod.rs
src/modules/info_extract/: admin.rs  mod.rs
src/modules/reviewer/: admin.rs  mod.rs
src/modules/summarizer/: admin.rs  mod.rs
src/modules/translatedocx/: admin.rs  mod.rs
src/utils/: docx_to_pdf.rs  mod.rs
src/web/: admin.rs  admin_utils.rs  auth.rs  data.rs  history.rs  history_client.js  history_styles.css  history_ui.rs  landing.rs  mod.rs  models.rs  responses.rs  router.rs  state.rs  status.rs  status_client.js  storage.rs  templates.rs  upload_ui.rs  uploads.rs
src/web/admin/: auth.rs  dashboard.rs  glossary.rs  journals.rs  mod.rs  types.rs  usage_groups.rs  users.rs
