[package]
name = "ai-toolkit"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
mime = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
argon2 = "0.5"
chrono = { version = "0.4", features = ["clock"] }
dotenvy = "0.15"
rand_core = "0.6"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "macros", "postgres", "chrono", "uuid"] }
cookie = "0.18"
